Fixes for vh unit behaviour on mobile
Replaced viewport units with percentage-based units.

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,13 @@
+html
+{
+  width: 100%;
+  height: 100%;
+}
+
 body
 {
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100%;
   margin: 0px;
 
   display: flex;
